syntax = "proto3";

package api;

import "types.proto";

// NOTE(stevvooe): Make sure your gopath is appropriately set for this to work
// correctly.
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// TODO(stevvooe): Move these options to vanity binary (ie gogoswarm).
option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

// Swarm provides the user control API.
//
// Other options for naming this interface:
//
// 	- "Control", since this controls a swarm cluster
// 	- "User" because it is user facing.
service Swarm {
	rpc ListNodes(ListNodesRequest) returns (ListNodesResponse) {}
	rpc DrainNode(DrainNodeRequest) returns (DrainNodeResponse) {}

	rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
	rpc GetTasks(GetTasksRequest) returns (GetTasksResponse) {}
	rpc RemoveTask(RemoveTaskRequest) returns (RemoveTaskResponse) {}
	rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}

	rpc CreateJob(CreateJobRequest) returns (CreateJobResponse) {}
	rpc GetJob(GetJobRequest) returns (GetJobResponse) {}
	rpc UpdateJob(UpdateJobRequest) returns (UpdateJobResponse) {}
	rpc RemoveJob(RemoveJobRequest) returns (RemoveJobResponse) {}
	rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {}
}

message ListNodesRequest {
}

message ListNodesResponse {
	repeated Node nodes = 1;
}

message DrainNodeRequest {
	string node_id = 1;
	bool drain = 2; // TODO(stevvooe): We need to have better notion of observed/desired.
}

message DrainNodeResponse {
}

message CreateTaskRequest {
	Spec spec = 1;
}

message CreateTaskResponse {
	string task_id = 1;
}

message GetTasksRequest {
	repeated string task_ids = 1;
}

message GetTasksResponse {
	repeated Task tasks = 1;
}

message RemoveTaskRequest {
	string task_id = 1;
}

message RemoveTaskResponse {
}

message ListTasksRequest {
}

message ListTasksResponse {
	repeated Task tasks = 1;
}

message CreateJobRequest {
	Spec spec = 1;
}

message CreateJobResponse {
	string job_id = 1;
}

message GetJobRequest {
	string job_id = 1;
}

message GetJobResponse {
	Job job = 1;
}

message UpdateJobRequest {
	string job_id = 1;
	Spec spec = 2;
}

message UpdateJobResponse {
}

message RemoveJobRequest {
	string job_id = 1;
}

message RemoveJobResponse {
}

message ListJobsRequest {
}

message ListJobsResponse {
	repeated Job jobs = 1;
}
